Fix header alignment in IE

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,6 @@
 body {background:white;-webkit-text-size-adjust: 100%;}
 body,table,h5 {font:normal 16px 'Open Sans';}
-header,main {margin:auto;max-width:1000px;}
+header,main {max-width:1000px;}
 header section {position:absolute;width:250px;}
 nav a {border-left:1px solid #ddd;padding:0 10px;}
 nav a:first-child {border:0;padding-left:0;}
